--- a/CuidooApp/Babysitter/Storyboards/BabySitterProfile.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/BabySitterProfile.storyboard
@@ -307,7 +307,7 @@
                         <barButtonItem key="backBarButtonItem" title="Cancelar" id="5Ht-ud-ZA4"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="babySItterImageOutlet" destination="cMe-yc-iBk" id="ASa-h4-KlY"/>
+                        <outlet property="babySitterImageView" destination="cMe-yc-iBk" id="s2H-KA-QF9"/>
                         <outlet property="onOffButtonOutlet" destination="81W-jZ-4D7" id="Z6h-gP-kfx"/>
                         <outlet property="startJobButtonOutlet" destination="t2H-eo-nj5" id="2TX-ox-hg2"/>
                         <segue destination="wf3-a0-YHo" kind="show" identifier="goToConfirmMatchSegue" id="rnS-tP-KkO"/>
