--- a/CuidooApp/Mom/Scenes/Support/FaqTableViewCell.xib
+++ b/CuidooApp/Mom/Scenes/Support/FaqTableViewCell.xib
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RkH-zp-LB7">
-                        <rect key="frame" x="10" y="10" width="501" height="168"/>
+                        <rect key="frame" x="17" y="10" width="487" height="168"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFF-fZ-kJ9">
                                 <rect key="frame" x="16" y="16" width="47.5" height="20.5"/>
@@ -25,9 +25,9 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUB-8u-bNx">
-                                <rect key="frame" x="16" y="41.5" width="465" height="108.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUB-8u-bNx">
+                                <rect key="frame" x="16" y="41.5" width="451" height="108.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -45,9 +45,9 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="RkH-zp-LB7" secondAttribute="bottom" constant="10" id="NE1-1l-Ws5"/>
-                    <constraint firstItem="RkH-zp-LB7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="VqG-AI-pOg"/>
+                    <constraint firstItem="RkH-zp-LB7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="VqG-AI-pOg"/>
                     <constraint firstItem="RkH-zp-LB7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="d9M-GQ-Oxu"/>
-                    <constraint firstAttribute="trailing" secondItem="RkH-zp-LB7" secondAttribute="trailing" constant="10" id="jp4-l8-Yzn"/>
+                    <constraint firstAttribute="trailing" secondItem="RkH-zp-LB7" secondAttribute="trailing" constant="17" id="jp4-l8-Yzn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
