--- a/CuidooApp/Mom/Storyboards/Base.lproj/Auth.storyboard
+++ b/CuidooApp/Mom/Storyboards/Base.lproj/Auth.storyboard
@@ -21,7 +21,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k86-p0-d3z">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CuidooLogo" translatesAutoresizingMaskIntoConstraints="NO" id="rgR-jr-WBq">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rgR-jr-WBq">
                                                 <rect key="frame" x="132" y="130" width="150" height="58"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="150" id="ZiH-Tn-8b2"/>
@@ -187,7 +187,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="CuidooLogo" width="50" height="19.5"/>
+        <image name="Logo" width="149.66667175292969" height="57.666667938232422"/>
         <image name="envelope.fill" catalog="system" width="64" height="46"/>
         <image name="lock.fill" catalog="system" width="64" height="64"/>
     </resources>
