--- a/CuidooApp/Babysitter/Storyboards/BabySitterProfile.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/BabySitterProfile.storyboard
@@ -310,7 +310,7 @@
                         <outlet property="babySitterImageView" destination="cMe-yc-iBk" id="s2H-KA-QF9"/>
                         <outlet property="onOffButtonOutlet" destination="81W-jZ-4D7" id="Z6h-gP-kfx"/>
                         <outlet property="startJobButtonOutlet" destination="t2H-eo-nj5" id="2TX-ox-hg2"/>
-                        <segue destination="wf3-a0-YHo" kind="show" identifier="goToConfirmMatchSegue" id="rnS-tP-KkO"/>
+                        <segue destination="wf3-a0-YHo" kind="presentation" identifier="goToConfirmMatchSegue" modalPresentationStyle="fullScreen" id="rnS-tP-KkO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3nQ-Oi-d8o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
