--- a/CuidooApp/Babysitter/Storyboards/WaitingSearchBabysitter.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/WaitingSearchBabysitter.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZWl-rj-O64">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ksm-zV-ACh">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -20,7 +20,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aguarde a mãe confirmar sua solicitação…" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsr-tg-Hsg">
-                                        <rect key="frame" x="42" y="432" width="330" height="42"/>
+                                        <rect key="frame" x="42" y="454" width="330" height="42"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="42" id="dVG-Zd-Whl"/>
                                         </constraints>
@@ -44,13 +44,13 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waitingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="QFv-0t-o8K">
-                                        <rect key="frame" x="173" y="342" width="68" height="66"/>
+                                        <rect key="frame" x="173" y="298" width="68" height="132"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="68" id="0Bw-3o-TZc"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CuidooLogo" translatesAutoresizingMaskIntoConstraints="NO" id="suO-VN-Wly">
-                                        <rect key="frame" x="32" y="64" width="350" height="28"/>
+                                        <rect key="frame" x="32" y="108" width="350" height="28"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="28" id="ftq-Pm-FAA"/>
                                         </constraints>
@@ -78,14 +78,46 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="ytA-50-4v1"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Csg-fK-nOR"/>
                     <connections>
                         <outlet property="cancelButton" destination="3Ne-T1-xQh" id="BfL-uL-o6H"/>
                         <outlet property="waitingBall" destination="QFv-0t-o8K" id="Tzl-5X-XlF"/>
+                        <segue destination="LVn-Jr-rCo" kind="presentation" identifier="goToOnGoingSegue" modalPresentationStyle="fullScreen" id="vQ7-Nw-wbd"/>
+                        <segue destination="qdI-OT-K5i" kind="unwind" identifier="goToProfileBabaSegue" unwindAction="goToProfileBabaUnwind:" id="rZD-1w-uZi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mQ3-MB-JAQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="qdI-OT-K5i" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="99" y="151"/>
+            <point key="canvasLocation" x="890" y="151"/>
+        </scene>
+        <!--OnGoingMatch-->
+        <scene sceneID="gjF-6u-DOO">
+            <objects>
+                <viewControllerPlaceholder storyboardName="OnGoingMatch" id="LVn-Jr-rCo" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="tWN-lb-nDQ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qp1-JV-2tx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1491" y="151"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lVF-gK-2kh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ksm-zV-ACh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UKV-3C-cCL">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZWl-rj-O64" kind="relationship" relationship="rootViewController" id="8Wg-V7-f99"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rw1-Ly-Pm2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="121.73913043478262" y="150.66964285714286"/>
         </scene>
     </scenes>
     <resources>
