--- a/CuidooApp/Mom/Storyboards/WaitingSearch.storyboard
+++ b/CuidooApp/Mom/Storyboards/WaitingSearch.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KFA-b7-CFW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9yp-9p-dIH">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estamos buscando uma cuidadora para você…" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5z-fH-YWS">
-                                <rect key="frame" x="42" y="432" width="330" height="42"/>
+                                <rect key="frame" x="42" y="454" width="330" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="1ft-WW-cuE"/>
                                 </constraints>
@@ -40,10 +40,10 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="waitingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="Nt9-JN-hRi">
-                                <rect key="frame" x="173" y="342" width="68" height="66"/>
+                                <rect key="frame" x="173" y="364" width="68" height="66"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CuidooLogo" translatesAutoresizingMaskIntoConstraints="NO" id="EW1-i4-voh">
-                                <rect key="frame" x="32" y="64" width="350" height="28"/>
+                                <rect key="frame" x="32" y="108" width="350" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="Uum-wx-WkX"/>
                                 </constraints>
@@ -72,20 +72,13 @@
                         <outlet property="cancelButton" destination="0J7-77-Bu7" id="Y4w-Sh-i64"/>
                         <outlet property="waitingBall" destination="Nt9-JN-hRi" id="ngJ-i2-bNE"/>
                         <segue destination="KSM-MM-9ij" kind="presentation" identifier="goToRequest" modalPresentationStyle="fullScreen" id="Ao9-lp-7br"/>
-                        <segue destination="5pf-Jp-8bm" kind="presentation" identifier="goToSearch" modalPresentationStyle="fullScreen" id="E3j-cT-fWn"/>
+                        <segue destination="lyH-SB-vC2" kind="unwind" identifier="goToSearchSegue" unwindAction="goToSearchUnwind:" id="Utp-xP-XLB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FYg-hs-qch" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="lyH-SB-vC2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="247.82608695652175" y="242.41071428571428"/>
-        </scene>
-        <!--Search-->
-        <scene sceneID="ThZ-v0-Rir">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Search" id="5pf-Jp-8bm" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gpW-Mr-Ot2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="66" y="627"/>
+            <point key="canvasLocation" x="968" y="242"/>
         </scene>
         <!--Request-->
         <scene sceneID="V6g-nf-ZMr">
@@ -95,7 +88,25 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="de9-Rn-Irz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="438" y="627"/>
+            <point key="canvasLocation" x="754" y="641"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VfB-19-J7T">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E2G-Lk-fG2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9yp-9p-dIH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gwZ-0e-s4Q">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KFA-b7-CFW" kind="relationship" relationship="rootViewController" id="H2F-ag-VzG"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="247.82608695652175" y="242.41071428571428"/>
         </scene>
     </scenes>
     <resources>
