--- a/CuidooApp/Mom/Storyboards/Search.storyboard
+++ b/CuidooApp/Mom/Storyboards/Search.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Cuidoo-->
+        <!--Search View Controller-->
         <scene sceneID="4mZ-dF-I0E">
             <objects>
                 <viewController id="ln4-Yv-ycu" customClass="SearchViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -61,7 +61,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="p1P-hf-pNX"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Cuidoo" id="Jab-k6-Wd2">
+                    <navigationItem key="navigationItem" id="Jab-k6-Wd2">
                         <barButtonItem key="backBarButtonItem" title=" " id="l2s-km-THx"/>
                         <barButtonItem key="rightBarButtonItem" image="person.crop.circle" catalog="system" id="inK-Y6-fla">
                             <color key="tintColor" red="1" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -73,7 +73,7 @@
                     <connections>
                         <outlet property="searchButton" destination="9z5-u0-nMU" id="l38-Wd-r80"/>
                         <outlet property="searchTableView" destination="jXd-NC-Slu" id="xdu-FV-bQa"/>
-                        <segue destination="68C-0S-Vgb" kind="presentation" identifier="goToWaitingScene" modalPresentationStyle="fullScreen" id="SBW-N4-11v"/>
+                        <segue destination="68C-0S-Vgb" kind="presentation" identifier="goToWaitingScene" modalPresentationStyle="overCurrentContext" id="SBW-N4-11v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q2m-qT-mcr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
