--- a/CuidooApp/Babysitter/Storyboards/WaitingSearchBabysitter.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/WaitingSearchBabysitter.storyboard
@@ -20,7 +20,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aguarde a mãe confirmar sua solicitação…" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsr-tg-Hsg">
-                                        <rect key="frame" x="42" y="454" width="330" height="42"/>
+                                        <rect key="frame" x="42" y="432" width="330" height="42"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="42" id="dVG-Zd-Whl"/>
                                         </constraints>
@@ -44,7 +44,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waitingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="QFv-0t-o8K">
-                                        <rect key="frame" x="173" y="298" width="68" height="132"/>
+                                        <rect key="frame" x="173" y="342" width="68" height="66"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="68" id="0Bw-3o-TZc"/>
                                         </constraints>
@@ -104,10 +104,9 @@
         <!--Navigation Controller-->
         <scene sceneID="lVF-gK-2kh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ksm-zV-ACh" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="ksm-zV-ACh" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UKV-3C-cCL">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
