--- a/CuidooApp/Mom/Storyboards/WaitingSearch.storyboard
+++ b/CuidooApp/Mom/Storyboards/WaitingSearch.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estamos buscando uma cuidadora para você…" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5z-fH-YWS">
-                                <rect key="frame" x="42" y="454" width="330" height="42"/>
+                                <rect key="frame" x="42" y="432" width="330" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="1ft-WW-cuE"/>
                                 </constraints>
@@ -40,7 +40,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="waitingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="Nt9-JN-hRi">
-                                <rect key="frame" x="173" y="364" width="68" height="66"/>
+                                <rect key="frame" x="173" y="342" width="68" height="66"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CuidooLogo" translatesAutoresizingMaskIntoConstraints="NO" id="EW1-i4-voh">
                                 <rect key="frame" x="32" y="58" width="350" height="28"/>
@@ -94,10 +94,9 @@
         <scene sceneID="VfB-19-J7T">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E2G-Lk-fG2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9yp-9p-dIH" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="9yp-9p-dIH" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gwZ-0e-s4Q">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
