--- a/CuidooApp/Babysitter/Scenes/GoingOnMatch/GoingOnMatchView.xib
+++ b/CuidooApp/Babysitter/Scenes/GoingOnMatch/GoingOnMatchView.xib
@@ -218,7 +218,7 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="a2d-pf-QsI" firstAttribute="leading" secondItem="fZt-fw-ggS" secondAttribute="leading" id="8dh-fW-R1e"/>
                 <constraint firstItem="fZt-fw-ggS" firstAttribute="trailing" secondItem="a2d-pf-QsI" secondAttribute="trailing" id="eiv-EP-JQG"/>
