--- a/CuidooApp/Babysitter/Storyboards/OnGoingMatch.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/OnGoingMatch.storyboard
@@ -17,26 +17,35 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ny9-Nb-lfj">
                                 <rect key="frame" x="215" y="780" width="183" height="66"/>
-                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="OU0-WL-7ez"/>
                                 </constraints>
-                                <state key="normal" title="Finalizar"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Finalizar">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="finalizeButtonAction:" destination="7g3-tF-Fu7" eventType="touchUpInside" id="zfl-1H-NcV"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMQ-VT-PFz">
                                 <rect key="frame" x="16" y="780" width="183" height="66"/>
-                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="SSC-Id-ck1"/>
                                 </constraints>
-                                <state key="normal" title="Reportar"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Reportar">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sp-HS-F1E" customClass="GoingOnMatchView" customModule="CuidooApp" customModuleProvider="target">
                                 <rect key="frame" x="8" y="96" width="398" height="668"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="13.0"/>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -64,6 +73,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="babysitterGoingOnMatchView" destination="5sp-HS-F1E" id="Utz-Ro-RaE"/>
+                        <outlet property="finalizeButton" destination="ny9-Nb-lfj" id="VVJ-el-cNL"/>
+                        <outlet property="reportButton" destination="lMQ-VT-PFz" id="7w3-qt-arF"/>
                         <segue destination="vea-T4-eLI" kind="show" identifier="goToChatSegue" id="828-mC-Est"/>
                         <segue destination="V8L-UW-1oL" kind="unwind" identifier="goToProfileBaba" unwindAction="goToProfileBabaUnwind:" id="HNk-bk-xRN"/>
                     </connections>
